# comptoken-program

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  compto_token_id.json  key  package-lock.json  package.json  rustfmt.toml
comptoken/: Cargo.toml
comptoken-transfer-hook/: Cargo.toml
comptoken-transfer-hook/src/: comptoken-transfer-hook.rs  generated.rs  verify_accounts.rs
comptoken-utils/: Cargo.toml
comptoken-utils/src/: comptoken_utils.rs  user_data.rs  verify_accounts.rs
comptoken/src/: comptoken.rs  comptoken_proof.rs  constants.rs  generated.rs  verify_accounts.rs
comptoken/src/global_data/: daily_distribution_data.rs  mod.rs  valid_blockhashes.rs
src/: compto_token.rs  comptoken.rs  comptoken_proof.rs  constants.rs  generated.rs  global_data.rs  mintblock.rs  user_data.rs  verify_accounts.rs
src/global_data/: daily_distribution_data.rs  mod.rs
src/user_data_storage/: hash_storage.rs  mod.rs  proof_storage.rs
src/user_data_storage/documentation/: HashStorage.md
test/: common.py  component_tests.py  dev_net_deploy.py  full_deploy_test.py  pyproject.toml  requirements.txt
test/compto-test-client/: accounts.js  assert.js  common.js  comptoken_proof.js  devnet_test_client.js  generic_test.js  initialize_comptoken_program.js  instruction.js  multiday_test_1.js  package-lock.json  package.json  parse_args.js  test_client.js  test_createUserDataAccount.js  test_dailyDistributionEvent.js  test_getOwedComptokens.js  test_getValidBlockhashes.js  test_initializeComptokenProgram.js  test_mint.js  test_proofSubmission.js  utils.js
test/compto-test-client/comptoken-tests/: createUserDataAccount.js  dailyDistributionAboveMaxHWM.js  dailyDistributionAtHWM.js  dailyDistributionAtMaxHWM.js  dailyDistributionBelowMaxHWM.js  dailyDistributionEvent.js  dailyDistributionNoMining.js  dailyDistributionTests.js  dailyDistributionUnderHWM.js  definedMultidayDailyDistribution.js  earlyDailyDistributionEvent.js  getOwedComptokens.js  getValidBlockhashes.js  growUserDataAccount.js  initializeComptokenProgram.js  mint.js  multidayDailyDistribution.js  proofSubmission.js  randomMultidayDailyDistribution.js  shrinkUserDataAccount.js  verifyHuman.js
test/compto-test-client/transfer-hook-tests/: execute.js  initialize_extra_account_meta_list.js
