[package]
name = "comptoken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.1"
comptoken-utils = { version = "0.1.0", path = "../comptoken-utils" }
solana-program = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }

[lib]
path = "src/comptoken.rs"
name = "comptoken"
crate-type = ["cdylib", "lib"]

[features]
testmode = []
